--- a/src/app/components/layout/app-layout.component.html
+++ b/src/app/components/layout/app-layout.component.html
@@ -8,7 +8,10 @@
       <i class="fas fa-bars" aria-hidden="true"></i>
     </button>
     <div class="logo" aria-label="Site logo">
-      <img src="https://www.sita.aero/static/images/logo.svg" alt="Logo" />
+      <a href="/">
+        <img src="https://www.sita.aero/static/images/logo.svg" alt="Logo" />
+      </a>
+
       <!-- <span class="logo-text">SITA</span> -->
     </div>
   </header>
